@@ -28,6 +28,7 @@ Designer 2.14.0 (2012-08-XX Markab)
    - MODELER-398: Setting a sensor on a Web element does not work
    - MODELER-392: Fractional Widget Coordinates when Browser
      has non-default zoom
+   - MODELER-399: Order of windows
 
 
 Designer 2.13.6 (2012-09-20 Rosemary)
